config-k8s/apps/dev/blue/virtualservice.yaml
apiVersion: appmesh.k8s.aws/v1beta2
kind: VirtualService
metadata:
  name: blue
  namespace: blue
spec:
  awsName: blue.santosoc.hosted.local
  provider:
    virtualRouter:
      virtualRouterRef:
        name: blue-router
